--- a/CIFAR_CNN.ipynb
+++ b/CIFAR_CNN.ipynb
@@ -88,7 +88,7 @@
       "outputs": [],
       "source": [
         "import torch\n",
-        "from torchvision.transforms import Compose, ToTensor, Normalize\n",
+        "from torchvision.transforms import Compose, ToTensor, Normalize, transforms\n",
         "from torchvision.datasets import CIFAR10\n",
         "from torchvision.utils import make_grid\n",
         "from torch.utils.data import DataLoader,random_split\n",
@@ -143,6 +143,8 @@
       "source": [
         "#Initializing normalizing transform for the dataset\n",
         "normalize_transform = Compose([ToTensor(), Normalize(mean = (0.5, 0.5, 0.5), std = (0.5, 0.5, 0.5))])\n",
+        "transform_augmentation=Compose([transforms.ToTensor(), transforms.RandomHorizontalFlip(), transforms.RandomRotation(15), \n",
+        "                               transforms.Normalize(mean = (0.5, 0.5, 0.5), std = (0.5, 0.5, 0.5))])\n",
         "\n",
         "#Downloading the CIFAR10 dataset into train and test sets\n",
         "train_dataset = CIFAR10(root=\"./CIFAR10/train\", train=True, transform=normalize_transform, download=True)\n",
